# ModelExplorer

./: ErrorTracer  README.md  install.sh  test.xml
docs/: _config.yml  index.html  index.md
docs/_layout/: default.html
docs/_layouts/: default.html
extraLibs/: libwebp.so.6.0.1
modelExplorerLibs/lib/: libClp.la  libClp.so.0.0.0  libClpSolver.la  libClpSolver.so.0.0.0  libCoinUtils.la  libCoinUtils.so.0.0.0  libOsi.la  libOsi.so.0.0.0  libOsiClp.la  libOsiClp.so.0.0.0  libOsiCommonTests.la  libOsiCommonTests.so.0.0.0  libcdt.la  libcdt.so.5.0.0  libcgraph.la  libcgraph.so.6.0.0  libgvc.la  libgvc.so.6.0.0  libgvpr.la  libgvpr.so.2.0.0  liblab_gamut.la  liblab_gamut.so.1.0.0  libpathplan.la  libpathplan.so.4.0.0  libxdot.la  libxdot.so.4.0.0
modelExplorerLibs/lib/graphviz/: config6  libgvplugin_core.la  libgvplugin_core.so.6.0.0  libgvplugin_dot_layout.la  libgvplugin_dot_layout.so.6.0.0  libgvplugin_gdk.la  libgvplugin_gdk.so.6.0.0  libgvplugin_gtk.la  libgvplugin_gtk.so.6.0.0  libgvplugin_neato_layout.la  libgvplugin_neato_layout.so.6.0.0  libgvplugin_pango.la  libgvplugin_pango.so.6.0.0  libgvplugin_xlib.la  libgvplugin_xlib.so.6.0.0
source_code/: CMakeLists.txt
source_code/include/: Explorer.h  FBA_model.h  Tree.h  fileops.h  find_blocked_optimizers.h  hull.h  nikal.h  point.h  svg.h
source_code/src/: Explorer.cpp  FBA_model.cpp  Tree.cpp  Window.cpp  fileops.cpp  find_blocked.cpp  find_blocked_helperfuns.cpp  find_blocked_optimizers.cpp  hull.cpp  main.cpp  nikal.cpp  pugixml.cpp  svg.cpp
source_code_ErrorTracer/: CMakeLists.txt
source_code_ErrorTracer/include/: ETracer.h  FBA_model.h  fileops.h  find_blocked_helperfuns.h  find_blocked_optimizers.h
source_code_ErrorTracer/src/: ETracer.cpp  FBA_model.cpp  fileops.cpp  find_blocked.cpp  find_blocked_helperfuns.cpp  find_blocked_optimizers.cpp  main.cpp
